[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "dumby"
version = "0.1.0"
description = "Contract-driven static UI builder with AI-readable context"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

authors = [
  { name = "Robby Jay Navarro" }
]

dependencies = []


[project.scripts]
dumby = "cuibuild.main:main"